--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -161,8 +161,8 @@
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
             }
              location /adminpage {
-                # auth_basic "Restricted Content";
-                # auth_basic_user_file /etc/nginx/.htpasswd; 
+                auth_basic "Restricted Content";
+                auth_basic_user_file /etc/nginx/.htpasswd; 
                 limit_conn two 60;
                 proxy_pass http://nextjs-admin;
                 proxy_http_version 1.1;
