--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -7,10 +7,9 @@ RUN rm /etc/nginx/nginx.conf
 RUN apt-get update && apt-get install -y openssl
 
 # Generate the self-signed certificate
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-    -keyout /etc/ssl/certs/selfsigned.key \
-    -out /etc/ssl/certs/selfsigned.crt \
-    -subj "/C=US/ST=State/L=City/O=Organization/OU=Unit/CN=localhost"
+COPY ./cert/selfsigned.crt /etc/ssl/certs/selfsigned.crt;
+COPY ./cert/selfsigned.key /etc/ssl/certs/selfsigned.key;
+
 
 
 USER root
