--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -15,76 +15,66 @@
                  
         access_log /var/log/nginx/access.log;
         error_log  /var/log/nginx/error.log;
-        limit_req_zone $binary_remote_addr zone=one:10m rate=20r/s;
+
+        limit_req_zone $binary_remote_addr zone=one:10m rate=30r/s;
         limit_conn_zone $binary_remote_addr zone=two:10m;
 
         # load balancing
         upstream user {
             least_conn;
             # zone user 32k;
-            server filmbackendmysql-user-3:5000 max_conns=20;
-            server filmbackendmysql-user-2:5000 max_conns=20;
-            server filmbackendmysql-user-1:5000 max_conns=20;
-            # server user1:5000 max_conns=20;
-            # server user2:5000 max_conns=20;
-
+            server filmbackendmysql-user-3:5000 max_conns=30;
+            server filmbackendmysql-user-2:5000 max_conns=30;
+            server filmbackendmysql-user-1:5000 max_conns=30;
         }
         upstream admin {
             least_conn;
             # zone admin 32k;
-            server filmbackendmysql-admin-3:5002 max_conns=20;
-            server filmbackendmysql-admin-2:5002 max_conns=20;
-            server filmbackendmysql-admin-1:5002 max_conns=20;
-            # server admin1:5002 max_conns=20;
-            # server admin2:5002 max_conns=20;
-
+            server filmbackendmysql-admin-3:5002 max_conns=30;
+            server filmbackendmysql-admin-2:5002 max_conns=30;
+            server filmbackendmysql-admin-1:5002 max_conns=30;
         }
         upstream film {
             least_conn;
-            # zone backend 32k;
-            server filmbackendmysql-film-1:5003 max_conns=20;
-            server filmbackendmysql-film-2:5003 max_conns=20;
+            zone film 32k;
+            server filmbackendmysql-film-1:5003 max_conns=30;
+            server filmbackendmysql-film-2:5003 max_conns=30;
+            server filmbackendmysql-film-3:5003 max_conns=30;
 
-            server filmbackendmysql-film-3:5003 max_conns=20;
-
-            # server film1:5003 max_conns=20;
-            # server film2:5003 max_conns=20;
         }
 
         upstream rbac {
-            least_conn;
+            least_conn; #gui request den may chu co so luong xu ly it nhat
             # zone backend 32k;
-            server filmbackendmysql-rbac-1:5004 max_conns=20;
-            server filmbackendmysql-rbac-2:5004 max_conns=20;
-            server filmbackendmysql-rbac-3:5004 max_conns=20;
-            # server film1:5003 max_conns=20;
-            # server film2:5003 max_conns=20;
+            server filmbackendmysql-rbac-1:5004 max_conns=30;
+            server filmbackendmysql-rbac-2:5004 max_conns=30;
+            server filmbackendmysql-rbac-3:5004 max_conns=30;
         }
 
         upstream nextjs {
-            # least_conn;
+            least_conn;
             # zone backend 32k;
-            server filmbackendmysql-nextjs-1:3000 max_conns=20;
-            server filmbackendmysql-nextjs-2:3000 max_conns=20;
-            server filmbackendmysql-nextjs-3:3000 max_conns=20;
+            server filmbackendmysql-nextjs-1:3000 max_conns=30;
+            server filmbackendmysql-nextjs-2:3000 max_conns=30;
+            server filmbackendmysql-nextjs-3:3000 max_conns=30;
         }
-         upstream nextjs-admin {
-            # least_conn;
+        upstream nextjs-admin {
+            least_conn;
             # zone backend 32k;
-            server filmbackendmysql-nextjs-admin-1:3001 max_conns=20;
-            server filmbackendmysql-nextjs-admin-2:3001 max_conns=20;
-            server filmbackendmysql-nextjs-admin-3:3001 max_conns=20;
+            server filmbackendmysql-nextjs-admin-1:3001 max_conns=30;
+            server filmbackendmysql-nextjs-admin-2:3001 max_conns=30;
+            server filmbackendmysql-nextjs-admin-3:3001 max_conns=30;
         }
-        # client_body_buffer_size 256k;
-        # client_header_buffer_size 1024k;
-        # large_client_header_buffers 4 256k;
-        # proxy_buffer_size 256k;
-        # proxy_buffers 4 256k;
-        # proxy_busy_buffers_size 256k;
+
+      
+
         # server {
         #     listen 80;
+        #     server_name localhost; 
+        #     # Chuyển hướng tất cả HTTP yêu cầu sang HTTPS
         #     return 301 https://$host$request_uri;
         # }
+
         server {
             # tls certification
             listen 443 ssl;
@@ -126,7 +116,6 @@
             }
 
             server_tokens off;
-            # add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self' https://localhost; frame-ancestors 'none';" always;
             location / {
                 # auth_basic "Restricted Content";
                 # auth_basic_user_file /etc/nginx/.htpasswd; 
@@ -139,21 +128,7 @@
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_cache_bypass $http_upgrade;
-                add_header X-Content-Type-Options nosniff always; # location = /sitemap.xml {
-            #     # Đảm bảo CSP được áp dụng cho trang sitemap
-                # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-                # add_header Content-Security-Policy "img-src 'self' https://localhost;frame-ancestors 'none';" always;
-            #}
-            # location = /robots.txt {
-            #     # Đảm bảo CSP được áp dụng cho trang sitemap
-            #     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-            #     add_header Content-Security-Policy "default-src 'self'; img-src 'self' https://localhost;frame-ancestors 'none';" always;
-            # }
-            # location = /%2Flogo-film.png&w=96&q=75 {
-            #     # Đảm bảo CSP được áp dụng cho trang sitemap
-            #     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-            #     add_header Content-Security-Policy "default-src 'self'; img-src 'self' https://localhost;frame-ancestors 'none';" always;
-            # }
+                add_header X-Content-Type-Options nosniff always;
                 add_header X-Frame-Options "SAMEORIGIN";
                 proxy_hide_header X-Powered-By;
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
@@ -172,7 +147,7 @@
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_cache_bypass $http_upgrade;
-                add_header X-Content-Type-Options nosniff always; # location = /sitemap.xml {
+                add_header X-Content-Type-Options nosniff always;
                 add_header X-Frame-Options "SAMEORIGIN";
                 proxy_hide_header X-Powered-By;
                # Đảm bảo CSP được áp dụng cho trang sitemap
@@ -182,8 +157,7 @@
             }
            
             location /rbac {
-                # limit_req zone=one burst=5 nodelay;
-            
+                limit_req zone=one burst=10 nodelay;
                 limit_conn two 60;
                 proxy_pass http://rbac;
                 proxy_http_version 1.1;
@@ -201,10 +175,8 @@
                 add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";
                
             }
-            location /user {
-                
-                # limit_req zone=one burst=5 nodelay;
-
+            location /user {  
+                limit_req zone=one burst=10 nodelay;
                 limit_conn two 60;
                 proxy_pass http://user;
                 proxy_http_version 1.1;
@@ -224,8 +196,7 @@
             }
 
             location /admin {
-                # limit_req zone=one burst=5 nodelay;
-            
+                limit_req zone=one burst=10 nodelay;
                 limit_conn two 60;
                 proxy_pass http://admin;
                 proxy_http_version 1.1;
@@ -241,14 +212,11 @@
                 add_header X-Content-Type-Options nosniff always;
                 add_header X-Frame-Options "SAMEORIGIN";
                 add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";
-            
-            
             }
 
-            location /film {
-               
-                limit_req zone=one burst=5 nodelay;
-                limit_conn two 60;
+            location /film {     
+                limit_req zone=one burst=10 nodelay;
+                limit_conn two 90;
                 proxy_pass http://film;
                 proxy_http_version 1.1;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
