--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -68,20 +68,25 @@
 
       
 
-        # server {
-        #     listen 80;
-        #     server_name localhost; 
-        #     # Chuyển hướng tất cả HTTP yêu cầu sang HTTPS
-        #     return 301 https://$host$request_uri;
-        # }
+        server {
+            listen 80 default_server;
+            server_name _; 
+            
+            # location ~ /.well-known/acme-challenge/ {
+            #     root /var/www/certbot;
+            # }
+            return 301 https://$host$request_uri;
+        }
 
         server {
             # tls certification
             listen 443 ssl;
             server_name localhost;
-
+            
             ssl_certificate /etc/ssl/certs/selfsigned.crt;
             ssl_certificate_key /etc/ssl/certs/selfsigned.key;
+            #  ssl_certificate /etc/letsencrypt/live/navyfilm.xyz/fullchain.pem;
+            # ssl_certificate_key /etc/letsencrypt/live/navyfilm.xyz/privkey.pem;
             ssl_protocols TLSv1.2 TLSv1.3;
             ssl_prefer_server_ciphers on;
             ssl_ciphers "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
@@ -89,7 +94,7 @@
             access_log  /var/log/nginx/access.log custom;
             error_log  /var/log/nginx/error.log warn;
             charset utf-8;
-
+          
             # for frontend can connect to backend through https
             # location / {
             #     add_header 'Access-Control-Allow-Origin' '*';
@@ -99,22 +104,26 @@
             modsecurity on;
             modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
-            if ($http_host ~* "169\.254\.169\.254") {
-                return 403;
-            }
-            if ($remote_addr = "169.254.169.254") {
-                return 403;
-            }
-            if ($http_host ~* "aws.zaproxy.org") {
-                return 403;
-            }
-              if ($http_host ~* "alibaba.zaproxy.org") {
-                return 403;
-            }
-            if ($http_host ~* "100\.100\.100\.200") {
-                return 403;
-            }
+            # if ($http_host ~* "169\.254\.169\.254") {
+            #     return 403;
+            # }
+            # if ($remote_addr = "169.254.169.254") {
+            #     return 403;
+            # }
+            # if ($http_host ~* "aws.zaproxy.org") {
+            #     return 403;
+            # }
+            #   if ($http_host ~* "alibaba.zaproxy.org") {
+            #     return 403;
+            # }
+            # if ($http_host ~* "100\.100\.100\.200") {
+            #     return 403;
+            # }
 
+            # location ~ /.well-known/acme-challenge/ {
+            #     root /var/www/certbot;
+            #      try_files $uri =404;
+            # }
             server_tokens off;
             location / {
                 # auth_basic "Restricted Content";
@@ -132,8 +141,9 @@
                 add_header X-Frame-Options "SAMEORIGIN";
                 proxy_hide_header X-Powered-By;
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-                add_header Content-Security-Policy "connect-src 'self' https://cdn.plyr.io https://s2.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
+                add_header Content-Security-Policy "connect-src 'self' https://localhost  https://cdn.plyr.io https://s2.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
+
             }
              location /adminpage {
                 auth_basic "Restricted Content";
@@ -154,6 +164,7 @@
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
                 add_header Content-Security-Policy "connect-src 'self' https://cdn.plyr.io https://s2.phim1280.tv;media-src 'self' blob:;object-src 'none';" always;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
+
             }
            
             location /rbac {
@@ -191,8 +202,7 @@
                 proxy_read_timeout 10s;
                 add_header X-Content-Type-Options nosniff always;
                 add_header X-Frame-Options "SAMEORIGIN";
-                add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";
-         
+                add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";         
             }
 
             location /admin {
@@ -212,6 +222,8 @@
                 add_header X-Content-Type-Options nosniff always;
                 add_header X-Frame-Options "SAMEORIGIN";
                 add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";
+    #  add_header 'Access-Control-Allow-Origin' 'https://45b4-2402-800-6375-94b7-5d90-17da-64f3-5a6c.ngrok-free.app';
+
             }
 
             location /film {     
@@ -232,6 +244,8 @@
                 add_header X-Frame-Options "SAMEORIGIN";
                 add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";
             }
+
+          
            
         }
     }
