--- a/admin/.env
+++ b/admin/.env
@@ -5,7 +5,7 @@ NODE_ENV=dev
 
 COOKIE_SESSION_SECRET=film_backend
 
-MSG_QUEUE_URL="amqps://manhlcbi:4RaEAOXMu4G3hABsnlRwZ8-1OMl83JOS@octopus.rmq3.cloudamqp.com/manhlcbi"
+MSG_QUEUE_URL="amqp://trongdat:abc123456@rabbitmq-film:5672"
 EXCHANGE_NAME="ONLINE_FILM"
 QUEUE_NAME="ADMIN_QUEUE"
 APP_SECRET="FILM_MICROSERVICES"
@@ -24,5 +24,5 @@ RBAC_BINDING_KEY="RBAC_BINDING"
 
 DATABASE_URL="mysql://root:trongdat1335@db-mysql:3306/admindb"
 
-CAPTCHA_SITE_KEY="6LfXO5QqAAAAADU5UPm71o7LmuIhN-K5_M3Ztez0"
-CAPTCHA_SECRET_KEY="6LfXO5QqAAAAAH2gHPWCQr7_ROoDNd10z54qKs7v"
+CAPTCHA_SITE_KEY="6LcTMZcqAAAAAAYpYV-BoPjawYsv7_uJutvjVSF0"
+CAPTCHA_SECRET_KEY="6LcTMZcqAAAAAMLbKZI1GRd0JSI-WplhuAm4ASV_"
