--- a/filmFrontendAdmin/package.json
+++ b/filmFrontendAdmin/package.json
@@ -15,16 +15,21 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.2",
     "@iconicicons/react": "^1.5.1",
-    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/alert": "^2.2.7",
+    "@nextui-org/react": "^2.6.8",
+    "@nextui-org/system": "^2.4.4",
+    "@nextui-org/theme": "^2.4.3",
     "@reduxjs/toolkit": "^2.2.6",
     "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "formik": "^2.4.6",
+    "framer-motion": "^11.14.4",
     "fs": "^0.0.1-security",
     "hls.js": "^1.5.13",
     "next": "^14.2.20",
+    "nextui-cli": "^0.5.0",
     "path": "^0.12.7",
     "plyr": "^3.7.8",
     "react": "^18",
