--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,10 +1,3 @@
- # file {
-  #   path => "/var/log/nginx/error.log"
-  #   start_position => "beginning"
-  #   sincedb_path => "/dev/null"
-  #   type => "error2"
-  # }
-
 input {
   file {
     path => "/var/log/nginx/access.log"
@@ -54,12 +47,11 @@ filter {
   else if [type] == "error" {
     grok {
       match => { 
-       
         "message" => [
-  "--%{DATA:transaction_id}---A--.*?\n.*?\n%{GREEDYDATA:full_log}",
-  "ModSecurity: %{WORD:modsec_action}\\. %{GREEDYDATA:modsec_message} \\[file \"%{GREEDYDATA:modsec_file}\"\\] \\[line \"%{INT:modsec_line}\"\\] \\[id \"%{INT:modsec_id}\"\\] \\[msg \"%{GREEDYDATA:modsec_msg}\"\\] \\[data \"%{GREEDYDATA:modsec_data}\"\\] \\[severity \"%{WORD:modsec_severity}\"\\] \\[tag \"%{GREEDYDATA:modsec_tags}\"\\]",
-  "Access denied with code %{NUMBER:status_code} \\(%{GREEDYDATA:phase}\\)"
-]
+        "--%{DATA:transaction_id}---A--.*?\n.*?\n%{GREEDYDATA:full_log}",
+        "ModSecurity: %{WORD:modsec_action}\\. %{GREEDYDATA:modsec_message} \\[file \"%{GREEDYDATA:modsec_file}\"\\] \\[line \"%{INT:modsec_line}\"\\] \\[id \"%{INT:modsec_id}\"\\] \\[msg \"%{GREEDYDATA:modsec_msg}\"\\] \\[data \"%{GREEDYDATA:modsec_data}\"\\] \\[severity \"%{WORD:modsec_severity}\"\\] \\[tag \"%{GREEDYDATA:modsec_tags}\"\\]",
+        "Access denied with code %{NUMBER:status_code} \\(%{GREEDYDATA:phase}\\)"
+        ]
       }
       tag_on_failure => ["modesec_error"]
     }
@@ -105,58 +97,15 @@ filter {
     }
   }
 
-  # else if [type] == "error2" {
-  #   grok {
-  #     match => { 
-  #        match => { 
-  #          "message" => [
-  #         "%{TIMESTAMP_ISO8601:timestamp} \[%{LOGLEVEL:loglevel}\] %{POSINT:pid}#%{POSINT:tid}: \*%{POSINT}: %{GREEDYDATA:error_message}"
-  #       ]
-      
-  #     }
-  #     }
-  #   }
-  #   # if [log_content] {
-  #   #   grok {
-  #   #     match => {
-  #   #       "log_content" => [
-  #   #         "%{WORD:http_method} %{URI:url} HTTP/%{NUMBER:http_version}",
-  #   #         "%{WORD:loglevel} %{GREEDYDATA:error_message}"
-  #   #       ]
-  #   #     }
-  #   #     tag_on_failure => ["modsec_error"]
-  #   #   }
-  #   # }
-  #   date {
-  #     match => [ "timestamp" , "yyyy/MM/dd HH:mm:ss" ]
-  #     timezone => "Asia/Ho_Chi_Minh"
-  #     target => "@timestamp"
-  #     remove_field => [ "timestamp" ]
-  #   }
-  # }
-
-  # if "_grokparsefailure" in [tags] {
-  #   mutate {
-  #     add_tag => ["_grokparsefailure"]
-  #   }
-  # }
-   # Thêm tag shouldmail cho lỗi từ modsec
-  # if [type] == "modsecerror" {
-  #   mutate {
-  #       add_tag => ["shouldmail"]
-  #   }
-  # }
 }
 
 output {
-
   if [type] == "access" {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
       index => "nginx-access-%{+YYYY.MM.dd}"
     }
   }
-
   else if [type] == "error" {
     elasticsearch {
       hosts => ["http://elasticsearch:9200"]
@@ -174,7 +123,7 @@ output {
         body => "\\Tags: %{tags}\n\n \\Content: %{message}\n\n \\Timestamp: %{@timestamp}"
         port => 587
         username => "hltdat2002@gmail.com"
-        password => "vhmnkbqjysveqljw"
+        password => "wzil qzgo oolp anmj"
         use_tls => true
       }
   }
