--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,34 +20,29 @@ services:
     networks:
       - backend-network
 
-  # prisma:
-  #   image: prismagraphql/prisma:1.34
-  #   container_name: prisma-server
+  redis-film:
+    image: redis:latest
+    container_name: redis-film
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    volumes: 
+      - redis:/data
+    networks:
+      - backend-network
 
-  #   restart: always
-  #   ports:
-  #     - '4466:4466'
-  #   environment:
-  #     PRISMA_CONFIG: |
-  #       managementApiSecret: myprismasecret
-  #       port: 4466
-  #       databases:
-  #         default:
-  #           connector: mysql
-  #           host: db-mysql
-  #           port: 3306
-  #           user: root
-  #           password: trongdat1335
-  #           connectionLimit: 100
-  #           migrations: true
-  rabbitmq:
-    image: rabbitmq:alpine
+  rabbitmq-film:
+    image: rabbitmq:3-management
     container_name: rabbitmq
     ports:
       - '5672:5672'
-      - '5671:5671'
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: trongdat
+      RABBITMQ_DEFAULT_PASS: abc123456
     networks:
       - backend-network
+    
  
   rbac:
     build:
@@ -56,7 +51,7 @@ services:
     restart: always
     image: tdat/rbac:1.0.0
     deploy:
-      replicas: 3
+      replicas: 1
     environment:
       - DB_PORT=3306
       - DB_HOST=db-mysql
@@ -64,9 +59,11 @@ services:
       - DB_PASSWORD=trongdat1335
       - DB_NAME=rbacdb
       - DATABASE_URL=mysql://root:trongdat1335@db-mysql:3306/rbacdb
+      - REDIS_HOST=redis-film
+      - REDIS_PORT=6379
     depends_on:
       - db-mysql
-      - rabbitmq
+      - redis-film
     volumes:
       - .:/app
       - /app/rbac/node_modules
@@ -88,7 +85,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     deploy:
-      replicas: 3
+      replicas: 1
     image: tdat/film:1.0.0
     environment:
       - DB_PORT=3306
@@ -97,9 +94,11 @@ services:
       - DB_PASSWORD=trongdat1335
       - DB_NAME=filmdb
       - DATABASE_URL=mysql://root:trongdat1335@db-mysql:3306/filmdb
+      - REDIS_HOST=redis-film
+      - REDIS_PORT=6379
     depends_on:
       - db-mysql
-      - rabbitmq
+      - redis-film
     volumes:
       - .:/app
       - /app/film/node_modules
@@ -125,7 +124,7 @@ services:
     restart: always
     image: tdat/user:1.0.0
     deploy:
-      replicas: 3
+      replicas: 1
     environment:
       - DB_PORT=3306
       - DB_HOST=db-mysql
@@ -133,9 +132,11 @@ services:
       - DB_PASSWORD=trongdat1335
       - DB_NAME=userdb
       - DATABASE_URL=mysql://root:trongdat1335@db-mysql:3306/userdb
+      - REDIS_HOST=redis-film
+      - REDIS_PORT=6379
     depends_on:
       - db-mysql
-      - rabbitmq
+      - redis-film
     volumes:
       - .:/app
       - /app/user/node_modules
@@ -163,7 +164,7 @@ services:
     restart: always
     image: tdat/admin:1.0.0
     deploy:
-      replicas: 3
+      replicas: 1
     environment:
       - DB_PORT=3306
       - DB_HOST=db-mysql
@@ -171,9 +172,12 @@ services:
       - DB_PASSWORD=trongdat1335
       - DB_NAME=admindb
       - DATABASE_URL=mysql://root:trongdat1335@db-mysql:3306/admindb
+      - REDIS_HOST=redis-film
+      - REDIS_PORT=6379
     depends_on:
       - db-mysql
-      - rabbitmq
+      - rabbitmq-film
+      - redis-film
       # - "redis"
     volumes:
       - .:/app/
@@ -200,7 +204,7 @@ services:
     expose:
       - 3000
     deploy:
-      replicas: 3
+      replicas: 1
     networks:
       - backend-network
 
@@ -214,7 +218,7 @@ services:
     expose:
       - 3001
     deploy:
-      replicas: 3
+      replicas: 1
     networks:
       - backend-network
 
@@ -295,7 +299,7 @@ services:
       - TZ=Asia/Ho_Chi_Minh  # Đặt múi giờ của hệ thống
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline
-      - /var/log/nginx:/var/log/nginx
+      - /var/log/nginx:/var/log/nginx:ro
       - ./logstash/csv:/usr/share/logstash/csv
     depends_on:
       - elasticsearch
@@ -331,4 +335,6 @@ volumes:
     driver: local
   my-db:
     external: true
+  redis:
+    driver: local
 
