--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,9 +1,10 @@
     load_module modules/ngx_http_modsecurity_module.so;
-    user  nginx;
-    worker_processes 4;
+    # user  nginx;
+    worker_processes auto;
 
     events { 
         worker_connections 1024; 
+        multi_accept on;
     }
 
     http {
@@ -16,54 +17,55 @@
         access_log /var/log/nginx/access.log;
         error_log  /var/log/nginx/error.log;
 
-        limit_req_zone $binary_remote_addr zone=one:10m rate=30r/s;
-        limit_conn_zone $binary_remote_addr zone=two:10m;
+        limit_req_zone $binary_remote_addr zone=one:10m rate=300r/s;
+        limit_conn_zone $binary_remote_addr zone=backend:10m;
+        limit_conn_zone $binary_remote_addr zone=admin:10m;
 
         # load balancing
         upstream user {
             least_conn;
-            # zone user 32k;
-            server filmbackendmysql-user-3:5000 max_conns=30;
-            server filmbackendmysql-user-2:5000 max_conns=30;
-            server filmbackendmysql-user-1:5000 max_conns=30;
+            # server filmbackendmysql-user-3:5000 max_conns=1000;
+            # server filmbackendmysql-user-2:5000 max_conns=1000;
+            server filmbackendmysql-user-1:5000 max_conns=1000;
         }
         upstream admin {
             least_conn;
             # zone admin 32k;
-            server filmbackendmysql-admin-3:5002 max_conns=30;
-            server filmbackendmysql-admin-2:5002 max_conns=30;
-            server filmbackendmysql-admin-1:5002 max_conns=30;
+            # server filmbackendmysql-admin-3:5002;
+            # server filmbackendmysql-admin-2:5002;
+            server filmbackendmysql-admin-1:5002;
         }
         upstream film {
             least_conn;
             zone film 32k;
-            server filmbackendmysql-film-1:5003 max_conns=30;
-            server filmbackendmysql-film-2:5003 max_conns=30;
-            server filmbackendmysql-film-3:5003 max_conns=30;
+            server filmbackendmysql-film-1:5003;
+            # server filmbackendmysql-film-2:5003;
+            # server filmbackendmysql-film-3:5003;
 
         }
 
         upstream rbac {
             least_conn; #gui request den may chu co so luong xu ly it nhat
             # zone backend 32k;
-            server filmbackendmysql-rbac-1:5004 max_conns=30;
-            server filmbackendmysql-rbac-2:5004 max_conns=30;
-            server filmbackendmysql-rbac-3:5004 max_conns=30;
+            server filmbackendmysql-rbac-1:5004;
+            # server filmbackendmysql-rbac-2:5004;
+            # server filmbackendmysql-rbac-3:5004;
         }
 
         upstream nextjs {
             least_conn;
             # zone backend 32k;
-            server filmbackendmysql-nextjs-1:3000 max_conns=30;
-            server filmbackendmysql-nextjs-2:3000 max_conns=30;
-            server filmbackendmysql-nextjs-3:3000 max_conns=30;
+            server filmbackendmysql-nextjs-1:3000;
+            # server filmbackendmysql-nextjs-2:3000;
+            # server filmbackendmysql-nextjs-3:3000;
         }
         upstream nextjs-admin {
             least_conn;
             # zone backend 32k;
-            server filmbackendmysql-nextjs-admin-1:3001 max_conns=30;
-            server filmbackendmysql-nextjs-admin-2:3001 max_conns=30;
-            server filmbackendmysql-nextjs-admin-3:3001 max_conns=30;
+            server filmbackendmysql-nextjs-admin-1:3001;
+            # server filmbackendmysql-nextjs-admin-2:3001;
+            # server filmbackendmysql-nextjs-admin-3:3001;
+            #  max_conns=1000;
         }
 
       
@@ -82,11 +84,11 @@
             # tls certification
             listen 443 ssl;
             server_name localhost;
-            
+            keepalive_timeout 75;
+            gzip on;
+            gzip_types text/plain application/json;
             ssl_certificate /etc/ssl/certs/selfsigned.crt;
             ssl_certificate_key /etc/ssl/certs/selfsigned.key;
-            #  ssl_certificate /etc/letsencrypt/live/navyfilm.xyz/fullchain.pem;
-            # ssl_certificate_key /etc/letsencrypt/live/navyfilm.xyz/privkey.pem;
             ssl_protocols TLSv1.2 TLSv1.3;
             ssl_prefer_server_ciphers on;
             ssl_ciphers "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
@@ -101,34 +103,20 @@
             #     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PATCH';
             #     add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, x-client-id';
             # }
+
             modsecurity on;
             modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
-            # if ($http_host ~* "169\.254\.169\.254") {
-            #     return 403;
-            # }
-            # if ($remote_addr = "169.254.169.254") {
-            #     return 403;
-            # }
-            # if ($http_host ~* "aws.zaproxy.org") {
-            #     return 403;
-            # }
-            #   if ($http_host ~* "alibaba.zaproxy.org") {
-            #     return 403;
-            # }
-            # if ($http_host ~* "100\.100\.100\.200") {
-            #     return 403;
-            # }
-
-            # location ~ /.well-known/acme-challenge/ {
-            #     root /var/www/certbot;
-            #      try_files $uri =404;
-            # }
+           
+            if ($http_host ~* "(169\.254\.169\.254|aws\.zaproxy\.org|alibaba\.zaproxy\.org|100\.100\.100\.200)") {
+                return 403;
+            }
+         
             server_tokens off;
             location / {
                 # auth_basic "Restricted Content";
                 # auth_basic_user_file /etc/nginx/.htpasswd; 
-                limit_conn two 60;
+                limit_conn admin 3000;
                 proxy_pass http://nextjs;
                 proxy_http_version 1.1;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -141,14 +129,17 @@
                 add_header X-Frame-Options "SAMEORIGIN";
                 proxy_hide_header X-Powered-By;
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-                add_header Content-Security-Policy "connect-src 'self' https://localhost  https://cdn.plyr.io https://s2.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
+                add_header Content-Security-Policy "connect-src 'self' https://localhost  https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
+        #            if ($request_uri ~ "%") {
+        #     return 403;
+        # }
 
             }
              location /adminpage {
-                auth_basic "Restricted Content";
-                auth_basic_user_file /etc/nginx/.htpasswd; 
-                limit_conn two 60;
+                # auth_basic "Restricted Content";
+                # auth_basic_user_file /etc/nginx/.htpasswd; 
+                limit_conn admin 3000; 
                 proxy_pass http://nextjs-admin;
                 proxy_http_version 1.1;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -162,14 +153,15 @@
                 proxy_hide_header X-Powered-By;
                # Đảm bảo CSP được áp dụng cho trang sitemap
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-                add_header Content-Security-Policy "connect-src 'self' https://cdn.plyr.io https://s2.phim1280.tv;media-src 'self' blob:;object-src 'none';" always;
+                add_header Content-Security-Policy "connect-src 'self' https://localhost/adminpage https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none';" always;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
+         
 
             }
            
             location /rbac {
                 limit_req zone=one burst=10 nodelay;
-                limit_conn two 60;
+                limit_conn backend 3000;
                 proxy_pass http://rbac;
                 proxy_http_version 1.1;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -188,7 +180,7 @@
             }
             location /user {  
                 limit_req zone=one burst=10 nodelay;
-                limit_conn two 60;
+                limit_conn backend 3000;
                 proxy_pass http://user;
                 proxy_http_version 1.1;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -206,8 +198,8 @@
             }
 
             location /admin {
-                limit_req zone=one burst=10 nodelay;
-                limit_conn two 60;
+                # limit_req zone=one burst=10 nodelay;
+                limit_conn backend 3000;
                 proxy_pass http://admin;
                 proxy_http_version 1.1;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -228,7 +220,7 @@
 
             location /film {     
                 limit_req zone=one burst=10 nodelay;
-                limit_conn two 90;
+                limit_conn backend 3000;
                 proxy_pass http://film;
                 proxy_http_version 1.1;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
