--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -24,47 +24,47 @@
         # load balancing
         upstream user {
             least_conn;
-            # server filmbackendmysql-user-3:5000 max_conns=1000;
-            # server filmbackendmysql-user-2:5000 max_conns=1000;
-            server filmbackendmysql-user-1:5000 max_conns=1000;
+            server filmbackendmysql-user-3:5000 max_conns=100;
+            server filmbackendmysql-user-2:5000 max_conns=100;
+            server filmbackendmysql-user-1:5000 max_conns=100;
         }
         upstream admin {
             least_conn;
             # zone admin 32k;
-            # server filmbackendmysql-admin-3:5002;
-            # server filmbackendmysql-admin-2:5002;
-            server filmbackendmysql-admin-1:5002;
+            server filmbackendmysql-admin-3:5002 max_conns=100;
+            server filmbackendmysql-admin-2:5002 max_conns=100;
+            server filmbackendmysql-admin-1:5002 max_conns=100;
         }
         upstream film {
             least_conn;
             zone film 32k;
-            server filmbackendmysql-film-1:5003;
-            # server filmbackendmysql-film-2:5003;
-            # server filmbackendmysql-film-3:5003;
+            server filmbackendmysql-film-1:5003 max_conns=100;
+            server filmbackendmysql-film-2:5003 max_conns=100;
+            server filmbackendmysql-film-3:5003 max_conns=100;
 
         }
 
         upstream rbac {
             least_conn; #gui request den may chu co so luong xu ly it nhat
             # zone backend 32k;
-            server filmbackendmysql-rbac-1:5004;
-            # server filmbackendmysql-rbac-2:5004;
-            # server filmbackendmysql-rbac-3:5004;
+            server filmbackendmysql-rbac-1:5004 max_conns=100;
+            server filmbackendmysql-rbac-2:5004 max_conns=100;
+            server filmbackendmysql-rbac-3:5004 max_conns=100;
         }
 
         upstream nextjs {
             least_conn;
             # zone backend 32k;
-            server filmbackendmysql-nextjs-1:3000;
-            # server filmbackendmysql-nextjs-2:3000;
-            # server filmbackendmysql-nextjs-3:3000;
+            server filmbackendmysql-nextjs-1:3000 max_conns=100;
+            server filmbackendmysql-nextjs-2:3000 max_conns=100;
+            server filmbackendmysql-nextjs-3:3000 max_conns=100; 
         }
         upstream nextjs-admin {
             least_conn;
             # zone backend 32k;
-            server filmbackendmysql-nextjs-admin-1:3001;
-            # server filmbackendmysql-nextjs-admin-2:3001;
-            # server filmbackendmysql-nextjs-admin-3:3001;
+            server filmbackendmysql-nextjs-admin-1:3001 max_conns=100;
+            server filmbackendmysql-nextjs-admin-2:3001 max_conns=100;
+            server filmbackendmysql-nextjs-admin-3:3001 max_conns=100;
             #  max_conns=1000;
         }
 
@@ -74,11 +74,9 @@
             listen 80 default_server;
             server_name _; 
             
-            # location ~ /.well-known/acme-challenge/ {
-            #     root /var/www/certbot;
-            # }
             return 301 https://$host$request_uri;
         }
+      
 
         server {
             # tls certification
@@ -91,7 +89,7 @@
             ssl_certificate_key /etc/ssl/certs/selfsigned.key;
             ssl_protocols TLSv1.2 TLSv1.3;
             ssl_prefer_server_ciphers on;
-            ssl_ciphers "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
+            ssl_ciphers HIGH:!aNULL:!MD5;
 
             access_log  /var/log/nginx/access.log custom;
             error_log  /var/log/nginx/error.log warn;
@@ -131,14 +129,18 @@
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
                 add_header Content-Security-Policy "connect-src 'self' https://localhost  https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
-        #            if ($request_uri ~ "%") {
-        #     return 403;
-        # }
-
+                if ($arg_w ~ "(^[0-9]+/[0-9]+$ )"){
+                    return 400;
+                }
+                
+                if ($arg_w ~ "(^[0-9]+%[A-Za-z0-9]{2}[0-9]+$)" ){
+                    return 400;
+                }
             }
-             location /adminpage {
-                # auth_basic "Restricted Content";
-                # auth_basic_user_file /etc/nginx/.htpasswd; 
+
+            location /adminpage {
+                auth_basic "Restricted Content";
+                auth_basic_user_file /etc/nginx/.htpasswd; 
                 limit_conn admin 3000; 
                 proxy_pass http://nextjs-admin;
                 proxy_http_version 1.1;
@@ -148,12 +150,16 @@
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_cache_bypass $http_upgrade;
-                add_header X-Content-Type-Options nosniff always;
-                add_header X-Frame-Options "SAMEORIGIN";
-                proxy_hide_header X-Powered-By;
+                add_header X-Content-Type-Options nosniff always; # ngan doan loai noi dung
+                add_header X-Frame-Options "SAMEORIGIN"; # cho phep nhung vao iframe cung nguon
+                proxy_hide_header X-Powered-By; # Ẩn thông tin về công nghệ được sử dụng trên máy chủ.
                # Đảm bảo CSP được áp dụng cho trang sitemap
+               # Bắt buộc trình duyệt chỉ sử dụng HTTPS để truy cập trang web.
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-                add_header Content-Security-Policy "connect-src 'self' https://localhost/adminpage https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none';" always;
+
+                # Kiểm soát nguồn nội dung mà trình duyệt được phép tải.
+                add_header Content-Security-Policy "    connect-src 'self' https://localhost/adminpage https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none';" always;
+                # Kiểm soát cách trình duyệt và bộ nhớ cache xử lý nội dung.
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
          
 
